# collection-api

./: Cargo.toml  Dockerfile  README.md  package-lock.json  package.json
src/: App.tsx  main.rs  main.tsx
src/api/: delete.rs  get.rs  list.rs  mod.rs  random.rs  upload.rs
src/components/button/: index.tsx  style.css
src/components/github-corner/: index.tsx
src/components/outline-button/: index.tsx  style.css
src/components/side-bar/: index.tsx  style.css
src/components/spacer/: index.tsx  style.css
src/database/: auth.rs  images.rs  lyrics.rs  mod.rs  sentences.rs  wallpaper.rs
src/page/home/: index.tsx  style.css
src/page/not-found/: index.tsx  style.css
src/page/scaffold/: index.tsx  style.css
